@@ -32,8 +32,11 @@ für die Gastmannschaft.
 
 <!-- ###MATCHTABLE### start -->
 ###MATCHS###
-<table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
+###FILTERITEMS###
+Spielplan für ###PLAYER_DCNAME###
+###FILTERITEMS###
 
+<table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
 ###MATCH###
 <tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
 <td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_LOGO######MATCH_COMPETITION_SHORT_NAME###)(###MATCH_UID###)</td>
